@@ -1,3 +1,7 @@
+2010-1-2 Ma Yue <velly.empire@gmail.com>
+
+    * Modify the "layout_of_window_titlebar_buttons" class
+
 2010-10-31 Ma Yue <velly.empire@gmail.com>
 
     * Fix a little bug of ImageChooser
